@@ -9,13 +9,12 @@ SEE COPYING FILE FOR LICENSE INFORMATION.
 
 THIS SOFTWARE IS PROVIDED AS A DEVELOPMENT SNAPSHOT TO AID
 COLLABORATION AND WAS NOT ISSUED AS A RELEASED PRODUCT BY INTEL.
-DOCUMENTATION AND TEST CODE COVERAGE ARE INCOMPLETE.
 
 
 LAST UPDATE
 -----------
 Christopher Cantalupo <christopher.m.cantalupo@intel.com>
-2014 October 23
+2014 November 13
 
 
 SUMMARY
